--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,3 +73,88 @@ body {
     z-index: 0;
     opacity: 0;
 }
+
+/* products.html */
+
+.product-container {
+    height: 100vh !important;
+}
+
+.product-container .row {
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+
+.product-container .row-1 {
+    margin-top: 10rem;
+    height: 70vh;
+}
+
+.product-container .col-md-7 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.product-container .col-md-7 .box-1 {
+    height: 65vh;
+    width: 95%;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: 0;
+    /* margin-right: 5%; */
+    background-color: #222B31 !important;
+    border: 4px solid #EE445F !important;
+}
+
+.product-container .col-md-5 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.product-container .col-md-5 .row {
+    margin: 0;
+}
+
+.product-container .col-md-5 .row .box-2 {
+    height: 30vh;
+    width: 95%;
+    margin-left: 5%;
+    margin-right: 0;
+    margin-top: 0;
+    background-color: #222B31 !important;
+    border: 4px solid #EE445F !important;
+}
+
+.product-container .col-md-5 .row .box-3 {
+    height: 30vh;
+    width: 95%;
+    margin-left: 5%;
+    margin-right: 0;
+    margin-top: 5vh;
+    background-color: #222B31 !important;
+    border: 4px solid #EE445F !important;
+}
+
+.product-container .row-2 {
+    height: 30vh;
+    margin-bottom: 10rem;
+}
+
+.product-container .row-2 .col-md-12 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.product-container .row-2 .box-4 {
+    height: 30vh;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    background-color: #222B31 !important;
+    border: 4px solid #EE445F !important;
+}
+
+/* .product-container .col-md-7, .product-container .col-md-5 {
+    margin-left: 1rem;
+    margin-right: 1rem;
+} */
