--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,10 +74,28 @@ body {
     opacity: 0;
 }
 
+.vcenter {
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.vcenter h1 {
+    font-family: 'Raleway', sans-serif;
+    color: #ffffff;
+}
+
+.vcenter h3 {
+    color: #a3bfc6;
+}
+
 /* products.html */
 
 .product-container {
     height: 100vh !important;
+    text-transform: uppercase;
 }
 
 .product-container .row {
@@ -96,14 +114,19 @@ body {
 }
 
 .product-container .col-md-7 .box-1 {
+    text-align: center;
     height: 65vh;
     width: 95%;
     padding-left: 0;
     padding-right: 0;
     margin-left: 0;
-    /* margin-right: 5%; */
     background-color: #222B31 !important;
     border: 4px solid #EE445F !important;
+}
+
+.product-container .col-md-7 .box-1:hover {
+    background-color: #EE445F !important;
+    border: 4px solid #222B31 !important;
 }
 
 .product-container .col-md-5 {
@@ -116,6 +139,7 @@ body {
 }
 
 .product-container .col-md-5 .row .box-2 {
+    text-align: center;
     height: 30vh;
     width: 95%;
     margin-left: 5%;
@@ -125,7 +149,13 @@ body {
     border: 4px solid #EE445F !important;
 }
 
+.product-container .col-md-5 .row .box-2:hover {
+    background-color: #EE445F !important;
+    border: 4px solid #222B31 !important;
+}
+
 .product-container .col-md-5 .row .box-3 {
+    text-align: center;
     height: 30vh;
     width: 95%;
     margin-left: 5%;
@@ -133,6 +163,11 @@ body {
     margin-top: 5vh;
     background-color: #222B31 !important;
     border: 4px solid #EE445F !important;
+}
+
+.product-container .col-md-5 .row .box-3:hover {
+    background-color: #EE445F !important;
+    border: 4px solid #222B31 !important;
 }
 
 .product-container .row-2 {
@@ -146,6 +181,7 @@ body {
 }
 
 .product-container .row-2 .box-4 {
+    text-align: center;
     height: 30vh;
     width: 100%;
     margin-left: 0;
@@ -154,7 +190,24 @@ body {
     border: 4px solid #EE445F !important;
 }
 
-/* .product-container .col-md-7, .product-container .col-md-5 {
-    margin-left: 1rem;
-    margin-right: 1rem;
-} */
+.product-container .row-2 .box-4:hover {
+    background-color: #EE445F !important;
+    border: 4px solid #222B31 !important;
+}
+
+.modal-backdrop.in {
+    filter: alpha(opacity=75);
+    opacity: 0.75;
+}
+
+.modal-content {
+    width: 100%;
+    border-radius: 0;
+    border: 4px solid #EE445F !important;
+    outline: 10px solid #222B31 !important;
+}
+
+.modal-title {
+    font-family: 'Raleway', sans-serif;
+    text-transform: uppercase;
+}
