--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,17 @@
 body {
-    background-color: #192226;
+    background-color: #ffffff;
     font-family: 'Fira Sans', sans-serif;
 }
 
 .navbar-inverse {
-    background: #222B31 !important;
+    background: #f2f2f2 !important;
     border-bottom: 4px solid #EE445F !important;
     font-family: 'Raleway', sans-serif;
 }
 
 .navbar-brand {
     text-transform: uppercase;
-    color: #ffffff !important;
+    color: #000000 !important;
     letter-spacing: 2px;
     margin-top: 2px;
 }
@@ -23,7 +23,7 @@ body {
 .nav a {
     /* letter-spacing: 2px; */
     padding: 16px !important;
-    color: #a3bfc6 !important;
+    color: #242038 !important;
     text-transform: uppercase;
     position: relative;
     z-index: 1000;
@@ -59,7 +59,7 @@ body {
 }
 
 .icon-bar {
-    background: #a3bfc6 !important;
+    background: #242038 !important;
 }
 
 .hover {
@@ -84,11 +84,11 @@ body {
 
 .vcenter h1 {
     font-family: 'Raleway', sans-serif;
-    color: #ffffff;
+    color: #000000;
 }
 
 .vcenter h3 {
-    color: #a3bfc6;
+    color: #242038;
 }
 
 /* products.html */
@@ -120,13 +120,13 @@ body {
     padding-left: 0;
     padding-right: 0;
     margin-left: 0;
-    background-color: #222B31 !important;
+    background-color: #f2f2f2 !important;
     border: 4px solid #EE445F !important;
 }
 
 .product-container .col-md-7 .box-1:hover {
     background-color: #EE445F !important;
-    border: 4px solid #222B31 !important;
+    border: 4px solid #f2f2f2 !important;
 }
 
 .product-container .col-md-5 {
@@ -145,13 +145,13 @@ body {
     margin-left: 5%;
     margin-right: 0;
     margin-top: 0;
-    background-color: #222B31 !important;
+    background-color: #f2f2f2 !important;
     border: 4px solid #EE445F !important;
 }
 
 .product-container .col-md-5 .row .box-2:hover {
     background-color: #EE445F !important;
-    border: 4px solid #222B31 !important;
+    border: 4px solid #f2f2f2 !important;
 }
 
 .product-container .col-md-5 .row .box-3 {
@@ -161,13 +161,13 @@ body {
     margin-left: 5%;
     margin-right: 0;
     margin-top: 5vh;
-    background-color: #222B31 !important;
+    background-color: #f2f2f2 !important;
     border: 4px solid #EE445F !important;
 }
 
 .product-container .col-md-5 .row .box-3:hover {
     background-color: #EE445F !important;
-    border: 4px solid #222B31 !important;
+    border: 4px solid #f2f2f2 !important;
 }
 
 .product-container .row-2 {
@@ -186,13 +186,13 @@ body {
     width: 100%;
     margin-left: 0;
     margin-right: 0;
-    background-color: #222B31 !important;
+    background-color: #f2f2f2 !important;
     border: 4px solid #EE445F !important;
 }
 
 .product-container .row-2 .box-4:hover {
     background-color: #EE445F !important;
-    border: 4px solid #222B31 !important;
+    border: 4px solid #f2f2f2 !important;
 }
 
 .modal-backdrop.in {
@@ -204,7 +204,7 @@ body {
     width: 100%;
     border-radius: 0;
     border: 4px solid #EE445F !important;
-    outline: 10px solid #222B31 !important;
+    outline: 10px solid #f2f2f2 !important;
 }
 
 .modal-title {
@@ -220,7 +220,7 @@ body {
 }
 
 .contact-container h1 {
-    color: #ffffff !important;
+    color: #000000 !important;
     font-family: 'Raleway', sans-serif;
     padding-bottom: 1rem;
     border-bottom: 4px solid #EE445F;
@@ -229,16 +229,16 @@ body {
 
 .contact-container h2 {
     /* font-size: 1.75rem !important; */
-    color: #ffffff;
+    color: #000000;
 }
 
 .contact-container p {
     font-size: 1.75rem !important;
-    color: #a3bfc6;
+    color: #242038;
 }
 
 .contact-container p svg {
-    color: #ffffff !important;
+    color: #000000 !important;
 }
 
 .contact-container p a svg {
@@ -255,14 +255,14 @@ textarea {
 }
 
 .input-group {
-    background-color: #222B31 !important;
+    background-color: #f2f2f2 !important;
     border: 2px solid #EE445F !important;
     border-radius: 0;
 }
 
 .input-group-addon {
     color: #EE445F !important;
-    background-color: #222B31 !important;
+    background-color: #f2f2f2 !important;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
@@ -290,7 +290,7 @@ textarea {
 }
 
 .text {
-    color: #ffffff;
+    color: #000000;
     font-family: 'Roboto Condensed';
     font-size: 22px;
     letter-spacing: 8px;
