--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,8 @@ body {
 }
 
 .navbar-inverse {
-    background: #f2f2f2 !important;
-    border-bottom: 4px solid #EE445F !important;
+    background: #eeeeee !important;
+    border-bottom: 4px solid #ffde02 !important;
     font-family: 'Raleway', sans-serif;
 }
 
@@ -69,7 +69,7 @@ body {
     height: 100%;
     top: 0px;
     left: 0px;
-    background: #EE445F !important;
+    background: #ffde02 !important;
     z-index: 0;
     opacity: 0;
 }
@@ -121,11 +121,11 @@ body {
     padding-right: 0;
     margin-left: 0;
     background-color: #f2f2f2 !important;
-    border: 4px solid #EE445F !important;
+    border: 4px solid #ffde02 !important;
 }
 
 .product-container .col-md-7 .box-1:hover {
-    background-color: #EE445F !important;
+    background-color: #ffde02 !important;
     border: 4px solid #f2f2f2 !important;
 }
 
@@ -146,11 +146,11 @@ body {
     margin-right: 0;
     margin-top: 0;
     background-color: #f2f2f2 !important;
-    border: 4px solid #EE445F !important;
+    border: 4px solid #ffde02 !important;
 }
 
 .product-container .col-md-5 .row .box-2:hover {
-    background-color: #EE445F !important;
+    background-color: #ffde02 !important;
     border: 4px solid #f2f2f2 !important;
 }
 
@@ -162,11 +162,11 @@ body {
     margin-right: 0;
     margin-top: 5vh;
     background-color: #f2f2f2 !important;
-    border: 4px solid #EE445F !important;
+    border: 4px solid #ffde02 !important;
 }
 
 .product-container .col-md-5 .row .box-3:hover {
-    background-color: #EE445F !important;
+    background-color: #ffde02 !important;
     border: 4px solid #f2f2f2 !important;
 }
 
@@ -187,11 +187,11 @@ body {
     margin-left: 0;
     margin-right: 0;
     background-color: #f2f2f2 !important;
-    border: 4px solid #EE445F !important;
+    border: 4px solid #ffde02 !important;
 }
 
 .product-container .row-2 .box-4:hover {
-    background-color: #EE445F !important;
+    background-color: #ffde02 !important;
     border: 4px solid #f2f2f2 !important;
 }
 
@@ -203,7 +203,7 @@ body {
 .modal-content {
     width: 100%;
     border-radius: 0;
-    border: 4px solid #EE445F !important;
+    border: 4px solid #ffde02 !important;
     outline: 10px solid #f2f2f2 !important;
 }
 
@@ -223,7 +223,7 @@ body {
     color: #000000 !important;
     font-family: 'Raleway', sans-serif;
     padding-bottom: 1rem;
-    border-bottom: 4px solid #EE445F;
+    border-bottom: 4px solid #ffde02;
     margin-bottom: 4rem;
 }
 
@@ -242,7 +242,7 @@ body {
 }
 
 .contact-container p a svg {
-    color: #EE445F !important;
+    color: #ffde02 !important;
 }
 
 form {
@@ -256,12 +256,12 @@ textarea {
 
 .input-group {
     background-color: #f2f2f2 !important;
-    border: 2px solid #EE445F !important;
+    border: 2px solid #ffde02 !important;
     border-radius: 0;
 }
 
 .input-group-addon {
-    color: #EE445F !important;
+    color: #ffde02 !important;
     background-color: #f2f2f2 !important;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
@@ -286,7 +286,7 @@ textarea {
     stroke-dasharray: 140 540;
     stroke-dashoffset: -474;
     stroke-width: 8px;
-    stroke: #EE445F;
+    stroke: #ffde02;
 }
 
 .text {
@@ -326,11 +326,106 @@ textarea {
     height: 75vh;  /* The height is 400 pixels */
     margin-right: 15%;
     margin-left: 15%;
-    border: 4px solid #EE445F !important;
+    border: 4px solid #ffde02 !important;
     /* border-style: solid;
     border-color: #000000; */
 }
 
 #success_message {
     display: none;
+}
+
+/* About page */
+.about-container {
+    margin-top: 10rem;
+}
+
+.about-container h1 {
+    font-family: 'Raleway', sans-serif;
+    color: #000000;
+    padding-bottom: 1rem;
+    border-bottom: 4px solid #ffde02;
+    margin-bottom: 4rem;
+    text-transform: uppercase;
+}
+
+.about-container p {
+    font-size: 2.5rem;
+    padding-bottom: 2rem;
+}
+
+.about-container .col-md-4 {
+    padding: 0;
+}
+
+.hovereffect {
+    width:100%;
+    height:300px !important;
+    float:left;
+    overflow:hidden;
+    position:relative;
+    text-align:center;
+    cursor:default;
+    /* margin-bottom: 5rem; */
+}
+
+.hovereffect .overlay {
+    width:100%;
+    height:100%;
+    position:absolute;
+    overflow:hidden;
+    top:0;
+    left:0;
+    opacity: 0;
+    /* background-color:rgba(0,0,0,0.5); */
+    /* -webkit-transition:all .4s ease-in-out;
+    transition:all .4s ease-in-out; */
+}
+
+.hovereffect img {
+    height: 300px !important;
+    display:block;
+    position:relative;
+    -webkit-transition:all .4s linear;
+    transition:all .4s linear;
+}
+
+.hovereffect h2 {
+    text-transform:uppercase;
+    color:#fff;
+    text-align:center;
+    position:relative;
+    font-size:17px;
+    background:rgba(0,0,0,0.6);
+    /* -webkit-transform:translatey(-100px);
+    -ms-transform:translatey(-100px);
+    transform:translatey(-100px); */
+    -webkit-transition:all .2s ease-in-out;
+    transition:all .2s ease-in-out;
+    padding:10px;
+    margin-top: 250px !important;
+}
+
+.hovereffect:hover img {
+    -ms-transform:scale(1.2);
+    -webkit-transform:scale(1.2);
+    transform:scale(1.2);
+}
+
+.hovereffect:hover .overlay {
+    opacity:1;
+    filter:alpha(opacity=100);
+}
+
+.hovereffect:hover h2,.hovereffect:hover a.info {
+    opacity:1;
+    filter:alpha(opacity=100);
+    -ms-transform:translatey(0);
+    -webkit-transform:translatey(0);
+    transform:translatey(0);
+}
+
+.hovereffect:hover a.info {
+    -webkit-transition-delay:.2s;
+    transition-delay:.2s;
 }
