--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,7 +32,8 @@ svg {
 
 @media screen and (min-width: 768px) {
     svg {
-        width: 100vw !important;
+        min-width: 100vw !important;
+        /* max-height: 100vh !important; */
         overflow: hidden;
     }
 }
@@ -45,7 +46,7 @@ svg {
 }
 
 /* Circuit-15 */
-/* @-webkit-keyframes draw {
+@-webkit-keyframes draw {
   0% {
   }
   100% {
@@ -80,10 +81,10 @@ svg {
 }
 .path-05 {
   animation-delay: 2s;
-} */
+}
 
 /* Circuit 10 */
-.path {
+/* .path {
   animation: draw 20s infinite;
   animation-timing-function: linear;
 }
@@ -109,4 +110,4 @@ svg {
     stroke-dashoffset: 0;
     stroke-opacity: 1;
   }
-}
+} */
