--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,15 +5,24 @@ body {
 
 .navbar-inverse {
     background: #eeeeee !important;
-    border-bottom: 4px solid #ffde02 !important;
+    border-bottom: 4px solid #248bb1 !important;
     font-family: 'Raleway', sans-serif;
 }
 
-.navbar-brand {
+/* .navbar a span {
+    font-size: 20px;
     text-transform: uppercase;
     color: #000000 !important;
     letter-spacing: 2px;
-    margin-top: 2px;
+    padding: 16px !important;
+} */
+
+.navbar a:hover {
+    text-decoration: none !important;
+}
+
+.navbar img {
+    margin-top: -15px;
 }
 
 .nav {
@@ -27,6 +36,10 @@ body {
     text-transform: uppercase;
     position: relative;
     z-index: 1000;
+}
+
+.nav a:hover {
+    color: #EEEEEE !important;
 }
 
 .nav li {
@@ -65,7 +78,7 @@ body {
     height: 100%;
     top: 0px;
     left: 0px;
-    background: #ffde02 !important;
+    background: #248bb1 !important;
     z-index: 0;
     opacity: 0;
 }
@@ -76,7 +89,7 @@ body {
     width: 100%;
     height: 5rem;
     background-color: #eeeeee !important;
-    border-top: 4px solid #ffde02;
+    border-top: 4px solid #248bb1;
 } */
 
 .vcenter {
@@ -126,12 +139,16 @@ body {
     padding-right: 0;
     margin-left: 0;
     background-color: #f2f2f2 !important;
-    border: 4px solid #ffde02 !important;
+    border: 4px solid #248bb1 !important;
 }
 
 .product-container .col-md-7 .box-1:hover {
-    background-color: #ffde02 !important;
+    background-color: #248bb1 !important;
     border: 4px solid #f2f2f2 !important;
+}
+
+.product-container .col-md-7 .box-1:hover h1 {
+    color: #ffffff !important;
 }
 
 .product-container .col-md-5 {
@@ -151,12 +168,16 @@ body {
     margin-right: 0;
     margin-top: 0;
     background-color: #f2f2f2 !important;
-    border: 4px solid #ffde02 !important;
+    border: 4px solid #248bb1 !important;
 }
 
 .product-container .col-md-5 .row .box-2:hover {
-    background-color: #ffde02 !important;
+    background-color: #248bb1 !important;
     border: 4px solid #f2f2f2 !important;
+}
+
+.product-container .col-md-5 .row .box-2:hover h1 {
+    color: #ffffff !important;
 }
 
 .product-container .col-md-5 .row .box-3 {
@@ -167,12 +188,16 @@ body {
     margin-right: 0;
     margin-top: 5vh;
     background-color: #f2f2f2 !important;
-    border: 4px solid #ffde02 !important;
+    border: 4px solid #248bb1 !important;
 }
 
 .product-container .col-md-5 .row .box-3:hover {
-    background-color: #ffde02 !important;
+    background-color: #248bb1 !important;
     border: 4px solid #f2f2f2 !important;
+}
+
+.product-container .col-md-5 .row .box-3:hover h1 {
+    color: #ffffff !important;
 }
 
 .product-container .row-2 {
@@ -192,12 +217,16 @@ body {
     margin-left: 0;
     margin-right: 0;
     background-color: #f2f2f2 !important;
-    border: 4px solid #ffde02 !important;
+    border: 4px solid #248bb1 !important;
 }
 
 .product-container .row-2 .box-4:hover {
-    background-color: #ffde02 !important;
+    background-color: #248bb1 !important;
     border: 4px solid #f2f2f2 !important;
+}
+
+.product-container .row-2 .box-4:hover h1 {
+    color: #ffffff !important;
 }
 
 .modal-backdrop.in {
@@ -208,7 +237,7 @@ body {
 .modal-content {
     width: 100%;
     border-radius: 0;
-    border: 4px solid #ffde02 !important;
+    border: 4px solid #248bb1 !important;
     outline: 10px solid #f2f2f2 !important;
 }
 
@@ -228,7 +257,7 @@ body {
     color: #000000 !important;
     font-family: 'Raleway', sans-serif;
     padding-bottom: 1rem;
-    border-bottom: 4px solid #ffde02;
+    border-bottom: 4px solid #248bb1;
     margin-bottom: 4rem;
 }
 
@@ -247,7 +276,7 @@ body {
 }
 
 .contact-container p a svg {
-    color: #ffde02 !important;
+    color: #248bb1 !important;
 }
 
 form {
@@ -261,13 +290,13 @@ textarea {
 
 .input-group {
     background-color: #f2f2f2 !important;
-    border: 2px solid #ffde02 !important;
+    border: 2px solid #248bb1 !important;
     border-radius: 0;
 }
 
 .input-group-addon {
-    color: #000000 !important;
-    background-color: #ffde02 !important;
+    color: #EEEEEE !important;
+    background-color: #248bb1 !important;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
@@ -291,7 +320,7 @@ textarea {
     stroke-dasharray: 140 540;
     stroke-dashoffset: -474;
     stroke-width: 8px;
-    stroke: #ffde02;
+    stroke: #248bb1;
 }
 
 .text {
@@ -331,7 +360,7 @@ textarea {
     height: 75vh;  /* The height is 400 pixels */
     margin-right: 15%;
     margin-left: 15%;
-    border: 4px solid #ffde02 !important;
+    border: 4px solid #248bb1 !important;
 }
 
 #success_message {
@@ -347,7 +376,7 @@ textarea {
     font-family: 'Raleway', sans-serif;
     color: #000000;
     padding-bottom: 1rem;
-    border-bottom: 4px solid #ffde02;
+    border-bottom: 4px solid #248bb1;
     margin-bottom: 4rem;
     text-transform: uppercase;
 }
@@ -442,7 +471,7 @@ textarea {
     font-family: 'Raleway', sans-serif;
     text-transform: uppercase;
     padding-bottom: 1rem;
-    border-bottom: 4px solid #ffde02;
+    border-bottom: 4px solid #248bb1;
     margin-bottom: 4rem;
 }
 
