--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ body {
 
 .product-container .row-1 {
     margin-top: 10rem;
-    height: 70vh;
+    /* height: 70vh; */
 }
 
 .product-container .col-md-7 {
@@ -140,6 +140,21 @@ body {
     margin-left: 0;
     background-color: #f2f2f2 !important;
     border: 4px solid #248bb1 !important;
+}
+
+@media screen and (max-width: 1023px) {
+    .product-container .col-md-7 .box-1 {
+        width: 100%;
+        margin-bottom: 5vh;
+    }
+    .product-container .col-md-5 .row .box-2 {
+        width: 100% !important;
+        margin-left: 0 !important;
+    }
+    .product-container .col-md-5 .row .box-3 {
+        width: 100% !important;
+        margin-left: 0 !important;
+    }
 }
 
 .product-container .col-md-7 .box-1:hover {
@@ -202,6 +217,7 @@ body {
 
 .product-container .row-2 {
     height: 30vh;
+    margin-top: 5vh;
     margin-bottom: 10rem;
 }
 
