--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,6 @@ body {
     padding-right: 0;
     margin-left: 0;
     background-color: #EEEEEE !important;
-    /* border: 4px solid #248bb1 !important; */
 }
 
 @media screen and (max-width: 1023px) {
@@ -151,7 +150,6 @@ body {
 
 .product-container .col-md-7 .box-1:hover {
     background-color: #248bb1 !important;
-    /* border: 4px solid #EEEEEE !important; */
 }
 
 .product-container .col-md-7 .box-1:hover h1 {
@@ -175,12 +173,10 @@ body {
     margin-right: 0;
     margin-top: 0;
     background-color: #EEEEEE !important;
-    /* border: 4px solid #248bb1 !important; */
 }
 
 .product-container .col-md-5 .row .box-2:hover {
     background-color: #248bb1 !important;
-    border: 4px solid #EEEEEE !important;
 }
 
 .product-container .col-md-5 .row .box-2:hover h1 {
@@ -193,14 +189,12 @@ body {
     width: 99%;
     margin-left: 1%;
     margin-right: 0;
-    margin-top: 0.5vh;
+    margin-top: 0 !important;
     background-color: #EEEEEE !important;
-    /* border: 4px solid #248bb1 !important; */
 }
 
 .product-container .col-md-5 .row .box-3:hover {
     background-color: #248bb1 !important;
-    border: 4px solid #EEEEEE !important;
 }
 
 .product-container .col-md-5 .row .box-3:hover h1 {
@@ -230,12 +224,10 @@ body {
     margin-left: 0;
     margin-right: 0;
     background-color: #EEEEEE !important;
-    /* border: 4px solid #248bb1 !important; */
 }
 
 .product-container .row-2 .box-4:hover {
     background-color: #248bb1 !important;
-    border: 4px solid #EEEEEE !important;
 }
 
 .product-container .row-2 .box-4:hover h1 {
@@ -257,6 +249,20 @@ body {
 .modal-title {
     font-family: 'Raleway', sans-serif;
     text-transform: uppercase;
+}
+
+.modal-title {
+    font-family: 'Raleway', sans-serif !important;
+    font-size: 3rem;
+}
+
+.modal-body img {
+    /* width: 100%; */
+    margin-bottom: 4rem;
+}
+
+.modal-body p {
+    font-size: 2rem;
 }
 
 /* Contact Us Page */
@@ -489,6 +495,16 @@ textarea {
 }
 
 .services-container p {
+    text-align: justify;
     font-size: 2.5rem;
     padding-bottom: 2rem;
+}
+
+.services-container img {
+    height: 100%;
+}
+
+hr {
+    border-top: 1px solid #AFADB6;
+    margin-bottom: 4rem !important;
 }
