--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,15 +409,19 @@ textarea {
     padding: 0;
 }
 
+.about-container img {
+    padding: 2rem;
+}
+
 .hovereffect {
-    width:100%;
-    height:300px !important;
-    float:left;
+    /* width:100%; */
+    margin: auto;
+    /* height:300px !important; */
+    float: left;
     overflow:hidden;
     position:relative;
     text-align:center;
     cursor:default;
-    /* margin-bottom: 5rem; */
 }
 
 .hovereffect .overlay {
@@ -428,13 +432,11 @@ textarea {
     top:0;
     left:0;
     opacity: 0;
-    /* background-color:rgba(0,0,0,0.5); */
-    /* -webkit-transition:all .4s ease-in-out;
-    transition:all .4s ease-in-out; */
 }
 
 .hovereffect img {
-    height: 300px !important;
+    margin: auto;
+    /* height: 300px !important; */
     display:block;
     position:relative;
     -webkit-transition:all .4s linear;
@@ -448,13 +450,10 @@ textarea {
     position:relative;
     font-size:17px;
     background:rgba(0,0,0,0.6);
-    /* -webkit-transform:translatey(-100px);
-    -ms-transform:translatey(-100px);
-    transform:translatey(-100px); */
     -webkit-transition:all .2s ease-in-out;
     transition:all .2s ease-in-out;
     padding:10px;
-    margin-top: 250px !important;
+    margin-top: 300px !important;
 }
 
 .hovereffect:hover img {
@@ -498,10 +497,6 @@ textarea {
     text-align: justify;
     font-size: 2.5rem;
     padding-bottom: 2rem;
-}
-
-.services-container img {
-    height: 100%;
 }
 
 hr {
