--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,14 +77,20 @@ body {
     opacity: 0;
 }
 
-/* footer {
-    position: absolute;
+footer {
+    /* position: absolute; */
     bottom: 0;
     width: 100%;
     height: 5rem;
+    margin-top: 3rem;
     background-color: #eeeeee !important;
     border-top: 4px solid #248bb1;
-} */
+}
+
+footer p a {
+    /* display: inline; */
+    width: 100px !important;
+}
 
 .vcenter {
     position: relative;
@@ -267,7 +273,8 @@ body {
 
 /* Contact Us Page */
 .contact-container {
-    margin-top: 10rem;
+    margin-top: 15rem;
+    margin-bottom: 7.5rem;
     max-height: 100vh !important;
     text-align: center !important;
 }
